# SemanticRoleLabeling-CPP

./: CMakeLists.txt  README.md  conanfile.py
AutoProcessor/ParseTree/Propbank/: AutoArgument.cpp  AutoArgument.h
AutoProcessor/Sentence/FrameNet/: SentenceAutoFramePredicate.h
AutoProcessor/Sentence/Propbank/: SentenceAutoArgument.h  SentenceAutoPredicate.h  TurkishSentenceAutoPredicate.cpp
src/: CMakeLists.txt
src/AutoProcessor/ParseTree/Propbank/: AutoArgument.cpp  AutoArgument.h  TurkishAutoArgument.cpp  TurkishAutoArgument.h
src/AutoProcessor/Sentence/FrameNet/: TurkishSentenceAutoFramePredicate.cpp  TurkishSentenceAutoFramePredicate.h
src/AutoProcessor/Sentence/Propbank/: TurkishSentenceAutoArgument.cpp  TurkishSentenceAutoPredicate.cpp  TurkishSentenceAutoPredicate.h
